--- a/root/Linux_yao/Drivers/USB/Makefile
+++ b/root/Linux_yao/Drivers/USB/Makefile
@@ -1,25 +1,25 @@
 # Comment/uncomment the following line to disable/enable debugging
-DEBUG = y
+# DEBUG = y
 
 
 # Add your debugging flag (or not) to CFLAGS
-ifeq ($(DEBUG),y)
-  DEBFLAGS = -O -g  
-else
-  DEBFLAGS = -O2
-endif
+# ifeq ($(DEBUG),y)
+#   DEBFLAGS = -O -g 
+# else
+#   DEBFLAGS = -O2
+# endif
 
 obj-m := usb_semg.o 
 #CROSS_COMPILE=arm-linux-
 #KERNELDIR ?= /home/yao/share/linux-2.6.36
 KERNELDIR ?= /lib/modules/$(shell uname -r)/build
 PWD := $(shell pwd)
-EXTRA_CFLAGS += $(DEBFLAGS)
-all:modules test
-modules:usb_semg.c
+# EXTRA_CFLAGS += $(DEBFLAGS)
+all: modules test
+modules: usb_semg.c
 	$(MAKE) -Wall  -C $(KERNELDIR) M=$(PWD) modules
-test:usb_test.c
-	gcc -Wall -lrt usb_test.c -o usb_test 
+test: usb_test.c led.c
+	gcc -Wall -lrt usb_test.c led.c -o usb_test
 install:
 	cp usb_semg.ko /forlinx/share
 	cp usb_test /forlinx/share
