修复了由于usb主控制器不一致导致的帧号范围不一致，并添加了头文件

--- a/root/Linux_yao/Drivers/USB/Makefile
+++ b/root/Linux_yao/Drivers/USB/Makefile
@@ -1,6 +1,6 @@
 # Comment/uncomment the following line to disable/enable debugging
 # DEBUG = y
-ARM = n
+ARM=yy
 
 # Add your debugging flag (or not) to CFLAGS
 # ifeq ($(DEBUG),y)
