编译通过，运行时发现有问题，怀疑通过usb驱动返回数据时由于类型问题导致bug

--- a/root/Debug/makefile
+++ b/root/Debug/makefile
@@ -1,7 +1,7 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
 ################################################################################
-ARM = n
+ARM = y
 
 ifeq ($(ARM), y)
 	CCC=arm-linux-gcc
