--- a/pc/app/SEMG.UIL/SEMG.UIL.csproj
+++ b/pc/app/SEMG.UIL/SEMG.UIL.csproj
@@ -75,10 +75,10 @@
       <HintPath>D:\Emgu\emgucv-windows-universal-cuda 2.9.0.1922\bin\Emgu.Util.dll</HintPath>
     </Reference>
     <Reference Include="MathNet.Filtering">
-      <HintPath>..\packages\MathNet.Filtering.0.1.1-alpha\lib\net40\MathNet.Filtering.dll</HintPath>
+      <HintPath>..\dll\MathNet.Filtering.dll</HintPath>
     </Reference>
     <Reference Include="MathNet.Numerics">
-      <HintPath>..\packages\MathNet.Numerics.3.0.2\lib\net40\MathNet.Numerics.dll</HintPath>
+      <HintPath>..\dll\MathNet.Numerics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -93,7 +93,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="ZedGraph">
-      <HintPath>dll\ZedGraph.dll</HintPath>
+      <HintPath>..\dll\ZedGraph.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
