--- a/pc/app/sEMG_DLL/Makefile
+++ b/pc/app/sEMG_DLL/Makefile
@@ -1,5 +1,5 @@
 
-CFLAGS = -Wall  -g
+CFLAGS = -Wall  -g -pthread -std=c++11
 TARGET = sEMG_DLL sEMG_test
 OBJS = Baseline_corrector.o Butterworth.o RLS.o sEMG_DLL.o socket.o utilities.o
 SOURCES = Baseline_corrector.cpp Butterworth.cpp RLS.cpp sEMG_DLL.cpp socket.cpp utilities.cpp
@@ -12,8 +12,9 @@ all: $(TARGET)
 
 sEMG_DLL: $(OBJS)
 
-test: $(OBJS)
-	sEMG_test
+
+sEMG_test: $(OBJS) sEMG_test.cpp
+	g++ -o $@ $^
 
 clean:
 	rm sEMG_DLL
