修复了linux select修改描述符集合和等待时间的问题，目前windows，mac，linux测试通过

--- a/pc/app/sEMG_DLL/Makefile
+++ b/pc/app/sEMG_DLL/Makefile
@@ -1,22 +1,22 @@
 
 CFLAGS = -Wall  -g -pthread -std=c++11
 TARGET = sEMG_DLL sEMG_test
-OBJS = Baseline_corrector.o Butterworth.o RLS.o sEMG_DLL.o socket.o utilities.o
-SOURCES = Baseline_corrector.cpp Butterworth.cpp RLS.cpp sEMG_DLL.cpp socket.cpp utilities.cpp
+OBJS = Baseline_corrector.o FOURIER.o Butterworth.o RLS.o sEMG_DLL.o socket.o utilities.o
+SOURCES = Baseline_corrector.cpp FOURIER.cpp Butterworth.cpp RLS.cpp sEMG_DLL.cpp socket.cpp utilities.cpp
 # INCPATH =
 # LIBPATH =
 # LIBS =
 
 
-all: $(TARGET)
+# all: sEMG_test
 
-sEMG_DLL: $(OBJS)
+# sEMG_DLL: $(OBJS)
 
 
-sEMG_test: $(OBJS) sEMG_test.cpp
-	g++ -o $@ $^
+sEMG_test: $(SOURCES) sEMG_test.cpp
+	g++ $(CFLAGS) -o $@ $^
 
 clean:
-	rm sEMG_DLL
+	rm sEMG_test
 
 .PHONY: clean all
